DFG abstract interpreter misclassifies ArraySortCompact result as SpecObjectOther https://bugs.webkit.org/show_bug.cgi?id=315143 rdar://177361524

Reviewed by Yijia Huang.

ArraySortCompact returns a JSCellButterfly but DFG abstract interpreter marks
the node as SpecObjectOther instead of SpecCellOther even though a JSCell is
not necessarily a JSObject. This patch fixes the abstract interpreter to use
SpecCellOther.

Test: JSTests/stress/array-sort-inline-ai-cell-butterfly-validation.js

* JSTests/stress/array-sort-inline-ai-cell-butterfly-validation.js: Added.
(sortIt):
* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):
* Source/JavaScriptCore/dfg/DFGPredictionPropagationPhase.cpp:

Canonical link: https://commits.webkit.org/313587@main